--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minima
+remote_theme: kirbyt/timeline-jekyll-theme
 plugins:
   - jekyll-feed
 
